--- a/index.html
+++ b/index.html
@@ -37,25 +37,33 @@
     <section id="productos">
         <h2>Nuestros Productos</h2>
         <div class="product-container">
-            <div class="producto" data-name="Gorra Negra Clásica" data-price="35.00" data-img="img/gorraa.jpg">
-                <img src="img/gorra-negro.png" alt="Gorra Negra Clásica">
-                <h3>Gorra Negra Clásica</h3>
+            <div class="producto" data-name="Gorra Negra Clásica" data-price="35.00" data-img="img/gorra-negro.png" data-description="Esta es una gorra negra clásica, perfecta para cualquier ocasión.">
+                <a href="details/details-product.html?name=Gorra%20Negra%20Clásica&price=35.00&img=img/gorra-negro.png&description=Esta%20es%20una%20gorra%20negra%20clásica,%20perfecta%20para%20cualquier%20ocasión." style="text-decoration: none; color: black;">
+                    <img src="img/gorra-negro.png" alt="Gorra Negra Clásica">
+                    <h3>Prendas en stock</h3>
+                </a>
                 <p>S/35.00</p>
                 <button class="btn-comprar">Añadir al carrito</button>
             </div>
-            <div class="producto" data-name="Gorra Blanca" data-price="45.00" data-img="img/gorraa.jpg">
-                <img src="img/gorra-minimalista.png" alt="Gorra Blanca">
-                <h3>Gorra Blanca</h3>
+        
+            <div class="producto" data-name="Gorra Blanca" data-price="45.00" data-img="img/gorra-minimalista.png" data-description="Una elegante gorra blanca para un look minimalista.">
+                <a href="details/details-product.html?name=Gorra%20Blanca&price=45.00&img=img/gorra-minimalista.png&description=Una%20elegante%20gorra%20blanca%20para%20un%20look%20minimalista." style="text-decoration: none; color: black;">
+                    <img src="img/gorra-minimalista.png" alt="Gorra Blanca">
+                    <h3>joyeria</h3>
+                </a>
                 <p>S/45.00</p>
                 <button class="btn-comprar">Añadir al carrito</button>
             </div>
-            <div class="producto" data-name="Gorra Deportiva Gris" data-price="55.00" data-img="img/gorraa.jpg">
-                <img src="img/gorra-roja.png" alt="Gorra Deportiva Gris">
-                <h3>Gorra Deportiva Gris</h3>
-                <p>S/55.00</p>
+        
+            <div class="producto" data-name="Gorras Deportivas" data-price="35.00" data-img="img/gorra-roja.png" data-description="Las mejores gorras deportivas, ideales para cualquier actividad al aire libre.">
+                <a href="details/details-product.html?name=Gorras%20Deportivas&price=35.00&img=img/gorra-roja.png&description=Las%20mejores%20gorras%20deportivas,%20ideales%20para%20cualquier%20actividad%20al%20aire%20libre." style="text-decoration: none; color: black;">
+                    <img src="img/gorra-roja.png" alt="Gorras Deportivas">
+                    <h3>Gorras deportivas</h3>
+                </a>
+                <p>S/35.00</p>
                 <button class="btn-comprar">Añadir al carrito</button>
-            </div>
-        </div>
+            </div>            
+        </div>        
     </section>
 
     <section id="nosotros">
