--- a/details/joyeria/details-product-anillo.html
+++ b/details/joyeria/details-product-anillo.html
@@ -48,15 +48,19 @@
                     </div>
                 </div>
                 
-                <!-- Selección de color -->
-                <div class="color-selector">
-                    <label for="color">Color:</label>
-                    <div class="color-options">
-                        <div class="color-option" style="background-color: red;" data-color="red"></div>
-                        <div class="color-option" style="background-color: black;" data-color="black"></div>
-                        <div class="color-option" style="background-color: white;" data-color="white"></div>
-                    </div>
-                </div>
+
+                 <!-- Selección de kilates -->
+                <!-- Selección de kilates -->
+<div class="kilate-selector">
+    <label for="weight">Kilates:</label>
+    <div class="kilate-options">
+        <div class="kilate-option" data-weight="10k">10</div>
+        <div class="kilate-option" data-weight="14k">14</div>
+        <div class="kilate-option" data-weight="18k">18</div>
+    </div>
+</div>
+
+                
 
                 <!-- Botón de añadir al carrito -->
                 <button class="btn-add-cart">Añadir al Carrito</button>
@@ -73,6 +77,6 @@
         </ul>
     </footer>
 
-    <script src="/details/gorras-deportivas/details-product-gorra.js"></script>
+    <script src="/details/joyeria/details-product-anillo.js"></script>
 </body>
 </html>
