--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="hero">
         <div class="hero-content">
             <h1>ASTRO</h1>
-            <p>La mejor marca de gorras de calidad</p>
+            <p>La mejor marca de moda de calidad</p>
             <button>Comprar Ahora</button>
         </div>
     </section>
