--- a/details/details-product.html
+++ b/details/details-product.html
@@ -15,11 +15,11 @@
         <nav class="navbar">
             <div class="logo">ASTRO</div>
             <ul class="nav-links">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Sobre Nosotros</a></li>
-                <li><a href="#">Testimonios</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="/index.html#productos">Productos</a></li>
+                <li><a href="/index.html#nosotros">Sobre Nosotros</a></li>
+                <li><a href="/index.html#testimonios">Testimonios</a></li>
+                <li><a href="/index.html#contact">Contacto</a></li>
                 <li><a href="#"><i class="fas fa-search"></i></a></li>
                 <li><a href="#" id="cart-icon"><i class="fas fa-shopping-cart"></i><span id="cart-count">0</span></a></li>
             </ul>
