--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <div class="logo">ASTRO</div>
             <ul class="nav-links">
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Sobre Nosotros</a></li>
-                <li><a href="#">Testimonios</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#productos">Productos</a></li>
+                <li><a href="#nosotros">Sobre Nosotros</a></li>
+                <li><a href="#testimonios">Testimonios</a></li>
+                <li><a href="#contact">Contacto</a></li>
                 <li><a href="#"><i class="fas fa-search"></i></a></li>
                 <li><a href="#" id="cart-icon"><i class="fas fa-shopping-cart"></i><span id="cart-count">0</span></a></li>
          </ul>
@@ -30,7 +30,8 @@
         <div class="hero-content">
             <h1>ASTRO</h1>
             <p>La mejor marca de moda de calidad</p>
-            <button>Comprar Ahora</button>
+            <a href="#productos"><button>Comprar Ahora</button></a>
+            
         </div>
     </section>
 
